--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -5,6 +5,8 @@
       "javascript",
       "javascriptreact"
     ],
+    "coc.preferences.hoverTarget": "float",
     "javascript.suggestionActions.enabled": false,
-    "javascript.validate.enable": false
+    "javascript.validate.enable": false,
+    "clangd.path": "/home/jsimpson/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd"
 }
