--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set -g escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g default-terminal "st-256color"
+set -g default-terminal "screen-256color"
 
 set -g history-limit 10000
 
