--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,8 @@ set -g escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g default-terminal "screen-256color"
+set  -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g history-limit 10000
 
