--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,8 @@ set -g escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-set  -g default-terminal "screen-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal 'screen-256color'
+set -ga terminal-overrides ',alacritty:Tc'
 
 set -g history-limit 10000
 
@@ -37,22 +37,9 @@ setw -q -g utf8 on
 
 set-option -g allow-rename off
 
-# gruvbox
-set -g status-justify "left"
-set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=colour246,bg=colour239"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour246"
-set -g status-style "none,bg=colour237"
-set -g message-style "fg=colour246,bg=colour239"
-set -g pane-border-style "fg=colour239"
-set -g status-right-length "100"
-set -g status-left-length "100"
-setw -g window-status-activity-style "none"
-setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour246,bg=colour237"
-set -g status-left "#[fg=colour235,bg=colour246,bold] #S #[fg=colour246,bg=colour237,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour246,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour246] #h #(~/bin/battery Discharging) "
-setw -g window-status-format "#[fg=colour246,bg=colour237] #I #[fg=colour246,bg=colour237] #W "
-setw -g window-status-current-format "#[fg=colour237,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I #[fg=colour246,bg=colour239] #W #[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'dracula/tmux'
+
+run '~/.tmux/plugins/tpm/tpm'
