--- a/tmux.conf
+++ b/tmux.conf
@@ -37,9 +37,21 @@ setw -q -g utf8 on
 
 set-option -g allow-rename off
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin 'dracula/tmux'
-
-run '~/.tmux/plugins/tpm/tpm'
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=#ddc7a1,bg=#32302f"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#32302f"
+set -g status-style "none,bg=#32302f"
+set -g message-style "fg=#ddc7a1,bg=#32302f"
+set -g pane-border-style "fg=#32302f"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#a89984,bg=#32302f"
+set -g status-left "#[fg=#32302f,bg=#ddc7a1] #S #[fg=#ddc7a1,bg=#32302f,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] %Y-%m-%d  %H:%M #[fg=#ddc7a1,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#32302f,bg=#ddc7a1] #h "
+setw -g window-status-format "#[fg=#a89984,bg=#32302f] #I #[fg=#a89984,bg=#32302f] #W "
+setw -g window-status-current-format "#[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #I #[fg=#ddc7a1,bg=#32302f] #W #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
