--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -9,9 +9,41 @@ font:
     family: Hack
   italic:
     family: Hack
-  size: 14.0
+  size: 13.0
 
 schemes:
+  palenight: &palenight
+    primary:
+      background: '0x292d3e'
+      foreground: '0x959dcb'
+    cursor:
+      text: '0x292d3e'
+      cursor: '0x959dcb'
+    normal:
+      black:   '0x292d3e'
+      red:     '0xf07178'
+      green:   '0xc3e88d'
+      yellow:  '0xffcb6b'
+      blue:    '0x82aaff'
+      magenta: '0xc792ea'
+      cyan:    '0x89ddff'
+      white:   '0x959dcb'
+    bright:
+      black:   '0x676e95'
+      red:     '0xf07178'
+      green:   '0xc3e88d'
+      yellow:  '0xffcb6b'
+      blue:    '0x82aaff'
+      magenta: '0xc792ea'
+      cyan:    '0x89ddff'
+      white:   '0xffffff'
+    indexed_colors:
+      - { index: 16, color: '0xf78c6c' }
+      - { index: 17, color: '0xff5370' }
+      - { index: 18, color: '0x444267' }
+      - { index: 19, color: '0x32374d' }
+      - { index: 20, color: '0x8796b0' }
+      - { index: 21, color: '0x959dcb' }
   dracula: &dracula
     primary:
       background: '0x282a36'
@@ -230,4 +262,37 @@ schemes:
       cyan:    '0x4c7a5d'
       white:   '0xe6d5ae'
 
-colors: *gruvbox_dark
+      #colors: *gruvbox_material_hard_dark
+
+colors:
+  primary:
+    background: '0x1d2021'
+    foreground: '0xd5c4a1'
+  cursor:
+    text: '0x1d2021'
+    cursor: '0xd5c4a1'
+  normal:
+    black:   '0x1d2021'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xd5c4a1'
+  bright:
+    black:   '0x665c54'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xfbf1c7'
+  indexed_colors:
+    - { index: 16, color: '0xfe8019' }
+    - { index: 17, color: '0xd65d0e' }
+    - { index: 18, color: '0x3c3836' }
+    - { index: 19, color: '0x504945' }
+    - { index: 20, color: '0xbdae93' }
+    - { index: 21, color: '0xebdbb2' }
