--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -11,6 +11,8 @@ font:
     family: Hack
   size: 13.0
 
+draw_bold_text_with_bright_colors: true
+
 schemes:
   palenight: &palenight
     primary:
