--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -298,3 +298,7 @@ colors:
     - { index: 19, color: '0x504945' }
     - { index: 20, color: '0xbdae93' }
     - { index: 21, color: '0xebdbb2' }
+
+key_bindings:
+  - { key: PageUp,   mods: Shift,   action: ScrollPageUp                 }
+  - { key: PageDown, mods: Shift,   action: ScrollPageDown               }
